separating concerns of controller with dep inversion and servicelocator - still buggy and tests broke